# nebula-chat

./: Cargo.toml  LICENSE  README.md  flake.nix
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link
.github/workflows/: build.yml  nix-lint.yml  rust-lint.yml
src/: main.rs
src/chat/: chat.rs
