[package]
name = "nebula-chat"
version = "0.1.0"
edition = "2021"
license = "BSD-2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
data-encoding = "2.9.0"
futures-lite = "2.6.0"
iroh = "0.35.0"
iroh-gossip = "0.35.0"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.0"
